# gh_actions_playground

./: .zenodo.json  CITATION.cff  README.md  pyproject.toml
.github/workflows/: build_docs.yml
docs/: conf.py  index.rst
src/playground/: __init__.py
