[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playground"
version = "0.1" 


readme = "README.md"


requires-python = ">=3.8"

authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]

dependencies = [
	'acoular>=23.11',
    'sphinx'
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
]



